# PackPreferences

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
src/: about.rs  app.rs  config.rs  discovery.rs  esi.rs  main.rs  process.rs  settings.rs  theme.rs
