[package]
name = "pack-preferences"
version = "0.1.0"
edition = "2021"
description = "Replicate EVE Online settings across characters"
license = "MIT"

[dependencies]
egui = "0.29"
eframe = { version = "0.29", default-features = false, features = ["default_fonts", "glow", "wayland", "x11"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
anyhow = "1.0"
dirs = "5.0"
reqwest = { version = "0.12", features = ["blocking", "json", "rustls-tls"], default-features = false }
chrono = "0.4"
rfd = "0.15"

[dev-dependencies]
tempfile = "3"
